Fix autodetect, dark mode

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -407,6 +407,9 @@ $dark: #222328;
       opacity: 0;
     }
   }
+  .header-consent-bg {
+    background-color: #f8f9fd;
+  }
 }
 body.modal-open,
 body.modal-sso-open {
